[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {email = "contact@kidger.site", name = "Patrick Kidger"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = ["wadler_lindig>=0.1.3"]
description = "Type annotations and runtime checking for shape and dtype of JAX/NumPy/PyTorch/etc. arrays."
entry-points = {pytest11 = {jaxtyping = "jaxtyping._pytest_plugin"}}
keywords = ["jax", "neural-networks", "deep-learning", "equinox", "typing"]
license = {file = "LICENSE"}
name = "jaxtyping"
readme = "README.md"
requires-python = ">=3.10"
urls = {repository = "https://github.com/patrick-kidger/jaxtyping"}
version = "0.3.5"

[project.optional-dependencies]
dev = [
  "pre-commit>=4.3.0"
]
docs = [
  "hippogriffe==0.2.2",
  "griffe==1.7.3",
  "mkdocs==1.6.1",
  "mkdocs-include-exclude-files==0.1.0",
  "mkdocs-ipynb==0.1.1",
  "mkdocs-material==9.6.7",
  "mkdocstrings==0.28.3",
  "mkdocstrings-python==1.16.8",
  "pymdown-extensions==10.14.3"
]
tests = [
  "beartype>=0.21.0",
  "cloudpickle>=3.1.1",
  "equinox>=0.13.1",
  "ipython>=8.37.0",
  "jax>=0.5.3",
  "mlx[cpu]>=0.29.1",
  "numpy<2",
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
  "tensorflow>=2.18.1",
  "typeguard==2.13.3"
]

[tool.hatch.build]
include = ["jaxtyping/*"]

[tool.ruff.lint]
ignore = ["E721", "E731", "F722"]
select = ["E", "F", "I001"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"collections" = "co"
"functools" = "ft"
"itertools" = "it"

[tool.ruff.lint.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
lines-after-imports = 2
order-by-type = false

[tool.ruff.lint.per-file-ignores]
"jaxtyping/_typeguard/__init__.py" = ["E", "F", "I001"]
